@@ -41,6 +41,6 @@
 ! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 module glimmer_vers
-  character(len=*), parameter :: glimmer_version = 'GLIMMER v. @GLIMMER_MAJOR_VERSION@.@GLIMMER_MINOR_VERSION@.@GLIMMER_MICRO_VERSION@'
+  character(len=*), parameter :: glimmer_version = 'GLIMMER v. @GLIMMER_MAJOR_VERSION@.@GLIMMER_MINOR_VERSION@.@GLIMMER_MICRO_VERSION@@GLIMMER_CVS_VERS@'
   !*FD Glimmer version string
 end module glimmer_vers
